[build-system]
requires = [
    "poetry-core>=1.0.0"
]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "pypi-server-testing"
package-mode = false
version = "1.0.0"
description = "An aRC pypi-server."
authors = [
    "Christopher De Jesus <chris@arcinc.com>",
]
license = "All Rights Reserved."
readme = "README.md"
homepage = "https://arcinc.com"
repository = "https://github.com/aRoboticsCompany/"


[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pypiserver = ">=2.1.1"

[tool.mypy]
exclude = [
    "temp/",
    "venv/",
]
ignore_missing_imports = true
follow_imports = "silent"
# disallow_untyped_defs = true
# disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
disable_error_code = "method-assign"
